# exqudens-c-sphinx

./: .gitignore  CMakeLists.txt  CMakePresets.json  name-version.txt
doc/: conf.py  conf_util.py  doxygenfile.txt  index.rst  main-doxygenfile.txt  main-no-group-doxygenfile.txt
doc/files/: files-toctree.rst  files.rst
doc/modules/: modules-toctree.rst  modules.rst
doc/modules2files/: modules2files.rst
doc/utils/: remove-all-pages-after-including-this.rst
src/main/c/exqudens/: math.c  math.h  string.c  string.h  sub_process.c  sub_process.h
